修復了npm run dev時無法連上frontend的問題

--- a/.gitignore
+++ b/.gitignore
@@ -105,4 +105,10 @@ Thumbs.db
 # Frontend temporary files
 frontend/.sass-cache/
 frontend/tmp/
-frontend/temp/ 
+frontend/temp/
+
+# --- allow gulp task files under frontend/build ---
+!frontend/build/
+!frontend/build/**/*.js
+!frontend/build/**/*.ts
+!frontend/build/**/*.json
