--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,8 +74,10 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "browser-sync": "^3.0.4",
     "butternut": "^0.4.6",
     "dir-tree-creator": "^4.0.0",
+    "dotenv": "^16.6.1",
     "event-stream": "^4.0.1",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
