fix: 修正 TypeScript 配置以支援 ES Modules
- 將 module 從 commonjs 改為 ESNext
- 將 moduleResolution 改為 bundler 以支援 tsx
- 在 package.json 中添加 type: module
- 解決模組系統相容性問題

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "name": "carbon-management-system",
   "version": "1.0.0",
   "description": "Carbon management and review system with frontend and backend",
+  "type": "module",
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
